# myagv_ros

./: .gitignore  README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/amcl/: AMCLConfig.h
devel/include/astra_camera/: AstraConfig.h  DeviceInfo.h  Extrinsics.h  GetBool.h  GetBoolRequest.h  GetBoolResponse.h  GetCameraInfo.h  GetCameraInfoResponse.h  GetCameraParams.h  GetCameraParamsRequest.h  GetCameraParamsResponse.h  GetDeviceInfo.h  GetDeviceInfoRequest.h  GetDeviceInfoResponse.h  GetInt32.h  GetInt32Request.h  GetInt32Response.h  GetString.h  GetStringRequest.h  GetStringResponse.h  Metadata.h  (+6 more)
devel/lib/: librtabmap_core.so.0.21  librtabmap_gui.so.0.21  librtabmap_utilite.so.0.21  librtabmap_utilite.so.0.21.2
myAGV_testTool/: main.py  myagv_window.py  myagv_window.ui
src/: CMakeLists.txt
src/auto_dock/: CMakeLists.txt  package.xml
src/auto_dock/data/: 1.json
src/auto_dock/include/auto_dock/: goal_sending.h
src/auto_dock/launch/: goal_sending.launch
src/auto_dock/src/: goal_sending.cpp  goal_sending_0.cpp  openfile.cpp  record_location.py  record_pose.cpp  send_goal.cpp
src/charging/: CMakeLists.txt  package.xml
src/myagv_navigation/: CMakeLists.txt  package.xml
src/myagv_odometry/: CMakeLists.txt  package.xml
src/myagv_ps2/: CMakeLists.txt  package.xml
src/myagv_teleop/: CMakeLists.txt  package.xml
src/myagv_urdf/: CMakeLists.txt  navigation_demo.py  test_2.py
src/robot_pose_ekf/: robot_pose_ekf.launch
src/simple_navigation_goals/: CMakeLists.txt
src/ydlidar_ros_driver/: CMakeLists.txt  package.xml
(+435 files in other folders)
